golden/error/parse_expected_term.test
*

# output:
 --> stdin:1:0
  |
1 | *
  | ^
Error: Expected a term here.
